<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ordenar">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/div1ver1"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="149dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/tacos_dorados" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/div1ver2Row1r1r1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/div1ver2Row1r1"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblmenuItem1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/ordrlblMenuItem1xml" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/div1ver2row2r1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spnTacDorPapa"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:entries="@array/tacos_cantidad" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/div1ver1row2"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="149dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/tacos_dorados" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/div1ver2row3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/div1ver2rowr3"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblMenuItem2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/ordrlblMenuItem2xml" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/div1ver2row2r3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spnTacorCar"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:entries="@array/tacos_cantidad" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/div1ver1r3"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="149dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/taco_bisteck" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/div1ver2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/div1ver2Row1"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblMenuItem3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/ordrlblMenuItem3xml" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/div1ver2row2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spnTacBistec"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:entries="@array/tacos_cantidad" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row4"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_weight="1"
                    android:text="@string/mainLblEnviarAxml"
                    android:textSize="18sp"
                    tools:text="Enviar a:" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_gap"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEditarEnvio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="editarDatos"
                    android:text="@string/ordrbtnCambiarDirxml"
                    tools:text="Cambiar Datos De Envio" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOrdenar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_weight="1"
                    android:onClick="confirmar"
                    android:text="@string/ordrbtnConfirmarxml"
                    tools:text="Ordenar" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>